# Vortek

./: .pdm-python  README.md  db - Copia.sqlite3  db.sqlite3  manage.py  pyproject.toml  requirements.txt
config/: settings.py  urls.py
vortek/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
vortek/migrations/: 0001_initial.py  0002_alter_aporte_data_aporte.py  0002_editora.py  0003_comentario_criptoativo_criptoativo_adq_noticia_and_more.py  0004_alter_criptoativo_valor_and_more.py  0005_alter_criptoativo_valor_and_more.py  0006_alter_criptoativo_valor_and_more.py  0007_alter_criptoativo_valor_and_more.py  0008_alter_criptoativo_valor_and_more.py  0009_aporte.py
